# argos3

./: .gitignore
src/: CMakeLists.txt
src/plugins/robots/: CMakeLists.txt
src/plugins/robots/foot-bot/control_interface/: ci_footbot_light_sensor.cpp  ci_footbot_proximity_sensor.cpp
src/plugins/robots/foot-bot/simulator/: footbot_entity.cpp  footbot_light_rotzonly_sensor.cpp  footbot_light_rotzonly_sensor.h
src/plugins/robots/generic/control_interface/: ci_range_and_bearing_sensor.h
src/plugins/robots/zebro/: CMakeLists.txt  CreateCrossCompFolderForRpi.cmake
src/plugins/robots/zebro/control_interface/: ci_zebro_heading_sensor.cpp  ci_zebro_heading_sensor.h  ci_zebro_localisation_sensor.cpp  ci_zebro_localisation_sensor.h  ci_zebro_locomotion_actuator.cpp  ci_zebro_locomotion_actuator.h  ci_zebro_proximity_sensor.cpp  ci_zebro_proximity_sensor.h  zebro_dimensions.h
src/plugins/robots/zebro/simulator/: dynamics2d_zebro_model.cpp  dynamics2d_zebro_model.h  physx_zebro_model.cpp  physx_zebro_model.h  qtopengl_zebro.cpp  qtopengl_zebro.h  zebro_dimensions.h  zebro_entity.cpp  zebro_entity.h  zebro_heading_default_sensor.cpp  zebro_heading_default_sensor.h  zebro_locomotion_actuator.cpp  zebro_locomotion_actuator.h  zebro_proximity_default_sensor.cpp  zebro_proximity_default_sensor.h  zebro_uwb_sensor.cpp  zebro_uwb_sensor.h
src/plugins/simulator/entities/: proximity_sensor_equipped_entity.cpp
